amended some css

--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,16 @@
 </head>
 
 <body>
+  <header>
+    <h1>Edi Cycle Data</h1>
+  </header>
   <noscript>
     <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
       Please enable it to continue.</strong>
   </noscript>
+
   <div id="app"></div>
+
   <!-- built files will be auto injected -->
 </body>
 
